# notes

./: .gitignore  2016Q2计划.md  AGENTS.md  README.md  spark上vllm部署nemotron3.md  spark上安装sglang.md
AutonomousInference/: CMakeLists.txt  README.md  requirements.txt
AutonomousInference/config/: sample_pipeline.json
AutonomousInference/docs/: software_design.md
AutonomousInference/include/ai/common/: config.h  logger.h  model_config.h  status.h  tensor.h
AutonomousInference/include/ai/framework/: model.h  model_registry.h  nuscenes_adapter.h  pipeline.h  ros2_bridge.h  scheduler.h
AutonomousInference/include/ai/models/: base_model.h  bev_model.h  e2e_trajectory_model.h  god_model.h  lane_mark_model.h
AutonomousInference/include/ai/runtime/: cuda_graph.h  cuda_stream.h  device_runtime.h  memory_pool.h  operator_runner.h
AutonomousInference/include/ai/utils/: timer.h
AutonomousInference/scripts/: run_demo.sh
AutonomousInference/src/: main.cpp
AutonomousInference/src/common/: config.cpp  logger.cpp
AutonomousInference/src/framework/: model_registry.cpp  nuscenes_adapter.cpp  pipeline.cpp  ros2_bridge.cpp  scheduler.cpp
AutonomousInference/src/models/: base_model.cpp  bev_model.cpp  e2e_trajectory_model.cpp  god_model.cpp  lane_mark_model.cpp
AutonomousInference/src/runtime/: cuda_graph.cpp  cuda_stream.cpp  device_runtime.cpp  memory_pool.cpp  operator_runner.cpp
AutonomousInference/src/utils/: timer.cpp
AutonomousInference/tests/: test_config.cpp  test_main.cpp  test_pipeline.cpp
deployment/: 00-overview-index-by-role-research.md  00-overview-index-by-role.md  00-role-based-overview.md  00_overview_index.md  00_overview_index_by_role.md  00_overview_index_research_log.md  00_role_based_overview.md  knowledge_base_part4_platform_validation_trends.md  progress.md  research_worklog.md
deployment/sources/: 00_overview_index_by_role_research.md
docs/: api_for_nvidia_nim.md  benchmark_sglang_qwen36_35b.md  benchmark_vllm_qwen36.md  config_openclaw_model.md  down_load_nuscenes_data.sh  flash-attn-cuda-nvcc-conda-setup.md  git_ssh_config_username_passwd.md  spark上vllm部署nemotron3.md  spark上安装sglang.md  sparsedrive_experiment_details.md  知识链接归档.md
docs/harness/: 01-模型训练与推理框架.md  03-模型管理与部署.md
personal/: 2016Q2计划.md  SparseDrive_模型流程与设计梳理.md  infer_repo_模型流程梳理.md  infer_repo_模型流程梳理_v2.md  plan_202605.md  复制目录树.md  瑞康-0417-study.md  端到端模型量化调研0.md  随记.md
plaza/anyclaw/: config_openclaw_model.md  openclaw_webui_site_setting.md
plaza/faq/: git_ssh_config_username_passwd.md  sandhill_ubuntu_dns_fail_faq.md  ubuntu_FAQ.md
plaza/llmserve/: benchmark_sglang_nemotron3.md  ollama_deploy_qwen3.6.md  ollama_download_faq.md
plaza/sparsedrive/: sparsedrive_experiment_details.md
scripts/: generate_deployment_kb.py  ollama_start_qwen36.sh  start_webui.sh  tailscale_clear_exit_boot.sh  test_nemotron3.sh  vllmstart_qwen3-6-35b-a3b-local.sh
scripts/cursor_agent/: generate_deployment_kb.py
scripts/launcher/: start_nemotron3-super-120b-a12b-nvfp4.sh  start_qwen35-122b-a10b.sh  start_qwen36-35b.sh  vllmstart_nemotron3-super-120b-a12b-nvfp4.sh  vllmstart_qwen36-35b.sh
scripts/utils/: code_server_start.sh  vpn_start.sh
(+20 files in other folders)
